# tabdiff

./: .env.sample  .gitignore  ARCHITECTURE_REFERENCE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  ci_diff_report.json
.github/workflows/: release.yml
.tabdiff/: baseline.json  config.json  corrected_baseline.json  fixed_baseline.json  test_baseline.json
src/: archive.rs  change_detection.rs  cli.rs  commands.rs  data.rs  duckdb_config.rs  error.rs  git.rs  hash.rs  lib.rs  main.rs  output.rs  progress.rs  resolver.rs  snapshot.rs  sql.rs  workspace.rs
test_data/: ratings_summary.csv
tests/: README.md  TEST_ROADMAP.md  lib.rs  test_runner.rs
tests/common/: mod.rs
tests/edge_cases/: data_edge_cases.rs  filesystem_tests.rs
tests/functional/: basic_functionality_tests.rs  comprehensive_change_detection_tests.rs  core_validation_tests.rs  date_rollback_tests.rs  sql_tests.rs  table_changes_tests.rs  workflow_tests.rs
tests/integration/: init_tests.rs  snapshot_tests.rs
tests/unit/: cli_tests.rs  workspace_tests.rs
