[package]
name = "tabdiff"
version = "0.1.5"
edition = "2021"
description = "A snapshot-based structured data diff tool"
license = "MIT"
repository = "https://github.com/user/tabdiff"

[[bin]]
name = "tabdiff"
path = "src/main.rs"

[[bin]]
name = "test_runner"
path = "tests/test_runner.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Data processing
duckdb = "1.0"
parquet = "53.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression and archiving
tar = "0.4"
zstd = "0.13"

# Hashing
blake3 = "1.5"

# Parallel processing
rayon = "1.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Progress reporting
indicatif = "0.17"

# File system utilities
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
bundled = ["duckdb/bundled"]
